# genre_classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: main.py
notebooks/: genre_classification_colab (2).ipynb  genre_classification_colab.ipynb
src/: predictor.py  preprocessing.py
ui/: app.py
