[project]
name = "genre-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
